# PetaVision

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
engine/: core.go  file_sync.go
models/file/: handler.go
scripts/: api.py  clip.py  consumer.py  fast_layer_decompostion.py  firebase-admin.json  fscs_layeering.py  generate_psd.js  milvus.py  mydataset.py  net.py  sync.py
scripts/fast_layer_decompostion_core/: Additive_mixing_layers_extraction.py  Convexhull_simplification.py  pyopencl_example.py
web/: next.config.js  package.json
web/src/app/: page.js
web/src/app/ai/: page.js
web/src/app/components/: Auth.jsx  AuthModal.jsx  InsufficientModal.jsx  NotOnWorkspace.jsx  OrganizationModal.jsx
web/src/app/digital/: page.js
web/src/app/layer/: page.js
web/src/app/layer/components/: Img2Img.jsx
web/src/app/upscale/: page.js
web/src/pages/api/: proxy-image.js
web/utils/: helpers.js
